--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".DetailActivitySearch"></activity>
         <activity android:name=".DetailActivityTv" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".SeeMoreActivity" />
