--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="id.syizuril.app.mastsee">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <permission android:name="id.syizuril.app.mastsee.provider.READ_MOVIE"/>
+    <permission android:name="id.syizuril.app.mastsee.provider.READ_TV"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,6 +26,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name=".provider.MovieContentProvider"
+            android:authorities="id.syizuril.app.mastsee.provider.MovieContentProvider"
+            android:exported="true"
+            android:permission="id.syizuril.app.mastsee.provider.READ_MOVIE"/>
+        <provider
+            android:authorities="id.syizuril.app.mastsee.provider.TvContentProvider"
+            android:name=".provider.TvContentProvider"
+            android:exported="true"
+            android:permission="id.syizuril.app.mastsee.provider.READ_TV"/>
     </application>
 
 </manifest>
