--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:enabled="true"
             android:exported="true"/>
 
+        <receiver android:name=".DailyReleaseReceiver"
+            android:enabled="true"
+            android:exported="true"/>
+
         <service
             android:name=".StackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
