--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.syizuril.app.mastsee">
 
+    <permission android:name="id.syizuril.app.mastsee.provider.READ_TV" />
+    <permission android:name="id.syizuril.app.mastsee.provider.READ_MOVIE" />
+
+    <uses-permission android:name="id.syizuril.app.mastsee.provider.READ_MOVIE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.SettingReminderActivity"></activity>
+        <activity android:name=".view.SplashScreen"
+            android:theme="@style/SplashScreenCustom">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter></activity>
+        <activity android:name=".view.AboutActivity" />
+        <activity android:name=".view.SettingReminderActivity" />
         <activity android:name=".view.DetailActivityTv" />
         <activity android:name=".view.DetailActivity" />
         <activity
@@ -19,11 +33,6 @@
             android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <provider
@@ -55,14 +64,14 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/movie_favorite_widget_info" />
         </receiver>
-
-        <receiver android:name=".services.DailyReminderReceiver"
+        <receiver
+            android:name=".services.DailyReminderReceiver"
             android:enabled="true"
-            android:exported="true"/>
-
-        <receiver android:name=".services.DailyReleaseReceiver"
+            android:exported="true" />
+        <receiver
+            android:name=".services.DailyReleaseReceiver"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <service
             android:name=".services.StackWidgetService"
@@ -71,11 +80,5 @@
             android:name=".services.TvStackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
-    <permission android:name="id.syizuril.app.mastsee.provider.READ_TV" />
-
-    <permission android:name="id.syizuril.app.mastsee.provider.READ_MOVIE" />
-    <uses-permission android:name="id.syizuril.app.mastsee.provider.READ_MOVIE" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
